--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -66,7 +66,7 @@
      </rect>
     </property>
     <property name="text">
-     <string>Значение максимльной частоты (signal_max,по умолчанию  является максимальным сигналом после инвертирования)</string>
+     <string>Значение максимльной частоты (signal_max)</string>
     </property>
    </widget>
   </widget>
